# infinite-recall

./: .env.example  .gitignore  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  run.sh
.github/workflows/: ci.yml
Backend-Rust/: .env.example  API.md  Cargo.toml
Backend-Rust/api/: Cargo.toml
Backend-Rust/api/migrations/: 0001_paused_work.sql
Backend-Rust/api/src/: auth.rs  db.rs  lib.rs  main.rs  state.rs  token.rs  worker_errors.rs
Backend-Rust/api/src/activity/: contract.md  gate.rs  inflight.rs  mod.rs  pause_store.rs  resources.rs  terminate.rs  traits.rs  types.rs
Backend-Rust/api/src/routes/: action_items.rs  activity.rs  health.rs  memories.rs  mod.rs  scores.rs  test_introspection.rs
Backend-Rust/api/tests/: activity_endpoints.rs  terminate_endpoint.rs
Backend-Rust/cli/: Cargo.toml
Backend-Rust/cli/src/: auth.rs  client.rs  error.rs  main.rs  output.rs
Backend-Rust/cli/src/commands/: action_items.rs  conversations.rs  health.rs  memories.rs  mod.rs  people.rs  scores.rs  search.rs
Backend-Rust/src/: auth.rs  db.rs  error.rs  main.rs
Desktop/: Info.plist  Package.swift  TESTING.md  omi_icon.icns
Desktop/Sources/: APIClient.swift  APIKeyService.swift  AgentSyncService.swift  AgentVMService.swift  AnalyticsManager.swift  AppBuild.swift  AppState.swift  AppleNotesReaderService.swift  AudioCaptureService.swift  AudioExclusionStore.swift  AudioMixer.swift  AudioPersistenceService.swift  AuthService.swift  BYOKValidator.swift  CalendarReaderService.swift  DesktopAutomationBridge.swift  FeedbackView.swift  GmailReaderService.swift  HeapManager.swift  LegacyUserDirMigrator.swift  Logger.swift  MemoryExportService.swift  MixpanelManager.swift  OmiApp.swift  OnboardingChatView.swift  OnboardingExportsStepView.swift  OnboardingFileScanStepView.swift  OnboardingFloatingBarDemoView.swift  OnboardingHowDidYouHearStepView.swift  OnboardingLanguageStepView.swift  OnboardingMemoryLogImportService.swift  OnboardingNotificationStepView.swift  OnboardingPagedIntroCoordinator.swift  OnboardingPermissionStepView.swift  OnboardingStepScaffold.swift  OnboardingTasksStepView.swift  OnboardingView.swift  OnboardingVoiceDemoView.swift  OnboardingWebResearchService.swift  OnboardingWelcomeStepView.swift  (+14 more)
Desktop/Tests/: APIClientRoutingTests.swift  ActionItemStorageTests.swift  ActivityModelsTests.swift  ActivityMonitorServiceColdStartGraceTests.swift  ActivityMonitorServiceQueueDepthTests.swift  ActivityPagePowerGateTests.swift  AppsImportsRegressionTests.swift  AudioPersistenceServiceTests.swift  BatteryAwareSchedulerQueueDepthDebounceTests.swift  BatteryAwareSchedulerReadinessTests.swift  ConversationSummaryBackfillServiceTests.swift  ConversationsClusterRegressionTests.swift  InternalPostFailureTrackerTests.swift  KGExtractorTests.swift  KGProgressPublisherSchemaProbeTests.swift  KGWiringTests.swift  KnowledgeGraphStorageTests.swift  LegacyUserDirMigratorTests.swift  ListenProtocolTests.swift  LocalDaemonTokenHealthGateTests.swift  LocalDaemonTokenReadTests.swift  LocalIntegrationDispatcherTests.swift  MemoryAssistantSettingsZeroPersistenceTests.swift  OnboardingFlowTests.swift  PendingWorkStorageDelegateTests.swift  PowerWorkBridgeTests.swift  ProcessingGateReporterTests.swift  RewindChunkTimestampParseTests.swift  RewindHistoricalTranscriptTests.swift  RewindSearchMultiLaneTests.swift  TranscriptSpeakerAssignmentTests.swift  TranscriptionStorageDiscardedFilterTests.swift  TranscriptionStorageRepairTests.swift  VoiceProfileAssignmentRegressionTests.swift
agent/: package-lock.json  package.json  vitest.config.ts
dmg-assets/logo/: WIRING.md
docs/: mcp-integration.md
docs/features/: README.md  activity.md  apps.md  conversations.md  home.md  memories.md  rewind.md  settings.md  tasks.md
e2e/: activity-tab.md
pi-mono-extension/: index.test.ts  index.ts
scripts/: build-dmg.sh  com.infiniterecall.api.plist  com.infiniterecall.mlx.plist  com.infiniterecall.vlm.plist  generate-icons.sh  setup-api-server.sh  setup-mlx-server.sh  setup-vlm-server.sh
tasks/: lessons.md  todo.md
tests/integration/: README.md  (+3 more)
(+148 files in other folders)
