[package]
name = "infinite-recall-api"
version = "0.1.0"
edition = "2021"
description = "Local-first read-only Omi-shaped REST API over the Infinite Recall SQLite DB"

[[bin]]
name = "infinite-recall-api"
path = "src/main.rs"

[lib]
name = "infinite_recall_api"
path = "src/lib.rs"

[dependencies]
# Web
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# SQLite
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors / utilities
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Token generation
rand = "0.8"
hex = "0.4"

# CLI args / env
dirs = "5"

# === activity:lane-d terminate endpoint ===
# Direct POSIX `kill(2)` for the LocalModel worker terminate route.
# Smaller than `nix`. Lane A is forbidden from editing Cargo.toml so this
# add is owned by Lane D — no coordination race.
libc = "0.2"

# === activity:stream-C resource sampler ===
# macOS process-tree CPU/RSS sampler used by Activity Tab.
libproc = "0.14"

[features]
# Enables the Activity Tab integration test wiring (Stream I, issue #19).
# When on, the gated tests in `tests/activity_endpoints.rs` compile and
# run against the real `infinite_recall_api::routes::router` library
# surface (now exposed by `lib.rs`).
activity_test_wiring = []

[dev-dependencies]
tempfile = "3"
# === activity:lane-d ===
# `libc` is in [dependencies] (used by the terminate route handler);
# integration tests at `tests/terminate_endpoint.rs` use it directly to
# probe pid liveness post-kill, so no extra dev-dep is needed.
# === /activity:lane-d ===
